Fixed header shift and added blobs

--- a/css/index.css
+++ b/css/index.css
@@ -10,11 +10,20 @@ li{
   margin-right: 2% ;
 }
 
+#blob2{
+  width: 55%;
+  position: absolute;
+  top:-35%;
+  left: -7%;
+}
+
 h1,h2,h3,h4,h5,h6{
   font-family: 'DM Serif Display', serif;
   font-weight: bold;
 
 }
+
+
 
 h1{
   font-weight: bold;
@@ -32,13 +41,17 @@ main{
 }
 .pic{
   /* position: absolute; */
-  background-image: url("../img/building2.jpg");
-  background-position: 1vw;
+  /* background-image: url("../img/building2.jpg"); */
+  /* background-position: 1vw;
   background-size: cover;
-  background-repeat:no-repeat;
-  width: 100%;
-  height: 50vw;
+  background-repeat:no-repeat; */
+  width: 20%;
+  /* height: 50vw; */
 
+}
+
+img{
+  width: 300%;
 }
 main span{
   /*background-color: #b3d4fc;*/
@@ -75,11 +88,11 @@ h2{
 
 }
 
-.navbar-nav{
+footer .navbar-nav{
   width: 100%;
 }
 
-#copyright{
+footer #copyright{
   font-size: 0.85em;
 }
 br{
@@ -95,6 +108,7 @@ br{
 .list-group{
   display: inline-block;
   text-align: left;
+  z-index: 2;
 }
 
 .scroll{
@@ -103,5 +117,29 @@ br{
 @media only screen and (max-width: 600px) {
   .mobile-gone{
     display: none;
+  }
+}
+@media only screen and (max-width: 800px) {
+  .mobile-gone{
+    display: none;
+  }
+  #blob2{
+    width:70%;
+    z-index: -5;
+  }
+  .pic{
+    width: 100%;
+  }
+
+  img{
+    width: 90%;
+  }
+}
+@media only screen and (max-width: 1000px) {
+  .pic{
+    width: 100%;
+  }
+  img{
+    width: 90%;
   }
 }
