--- a/css/members.css
+++ b/css/members.css
@@ -13,6 +13,7 @@ body{
 }
 
 main{
+  margin-top: 7%;
   padding: inherit !important;
   background-color: white;
 }
@@ -65,7 +66,6 @@ img{
 }
 
 .card {
-width: 25rem;
   border-radius: 3px;
   box-shadow: 0 1px 0.5px rgba(0, 0, 0, 0.1);
   border-radius: 3px;
